--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,11 @@ main .page-corp {
   height: 100%;
 }
 
+/* hover su icone */
+main .sidebar li:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 /* jumbotron */
 
 /* corpo pagina */
